<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>MagicDesktopCompanion</name>
	<description>Card manager for magic the gathering</description>
	<url>https://github.com/nicho92/MtgDesktopCompanion</url>
	<issueManagement>
		<system>Github</system>
		<url>https://github.com/nicho92/MtgDesktopCompanion/issues</url>
	</issueManagement>
	<groupId>org.magic</groupId>
	<artifactId>magic-api</artifactId>
	<version>1.83</version>
	<packaging>jar</packaging>
	<scm>
		<url>https://github.com/nicho92/MtgDesktopCompanion</url>
		<developerConnection>Nicho</developerConnection>
	</scm>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>asciitable</groupId>
			<artifactId>asciitable</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/asciitable.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>mkm-api</groupId>
			<artifactId>mkm-api</artifactId>
			<version>0.6</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/mkm-api-java-0.6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.github.insubstantial</groupId>
			<artifactId>trident</artifactId>
			<version>1.4</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/trident-1.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.github.insubstantial</groupId>
			<artifactId>substance</artifactId>
			<version>7.0.2</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/substance-7.0.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.github.insubstantial</groupId>
		    <artifactId>laf-widget</artifactId>
		    <version>7.3</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/laf-widget.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.github.insubstantial</groupId>
    		<artifactId>laf-plugin</artifactId>
   			<version>7.3</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/laf-plugin.jar</systemPath>
		</dependency>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.jdesktop</groupId>
			<artifactId>beansbinding</artifactId>
			<version>1.2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
    		<groupId>org.reflections</groupId>
   			<artifactId>reflections</artifactId>
  			<version>0.9.11</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.11</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>
		<!-- <dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
		</dependency> -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-jxpath</groupId>
			<artifactId>commons-jxpath</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.7</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.27-incubating</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.glazedlists</groupId>
			<artifactId>glazedlists_java15</artifactId>
			<version>1.9.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.2</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.9</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.13</version>
		</dependency>
		<dependency>
			<groupId>org.japura</groupId>
			<artifactId>japura-gui</artifactId>
			<version>7.5.2</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.24</version>
		</dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom2</artifactId>
			<version>2.0.6</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.11.2</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.mina</groupId>
			<artifactId>mina-core</artifactId>
			<version>2.0.16</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.8-dmr</version>
		</dependency>
		<dependency>
			<groupId>org.nanohttpd</groupId>
			<artifactId>nanohttpd</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.1.jre7</version>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino</artifactId>
			<version>1.7.8</version>
		</dependency>
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>1.9.0</version>
		</dependency>
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome-utils</artifactId>
			<version>1.9.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.8.0-beta1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.8.0-beta1</version>
		</dependency>
		<dependency>
			<groupId>org.swinglabs.swingx</groupId>
			<artifactId>swingx-all</artifactId>
			<version>1.6.5-1</version>
		</dependency>
		<dependency>
			<groupId>net.coderazzi</groupId>
			<artifactId>tablefilter-swing</artifactId>
			<version>5.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.10</version>
		</dependency>
		<dependency>
       		 <groupId>org.mongodb</groupId>
        	 <artifactId>mongodb-driver</artifactId>
        <version>3.6.2</version>
    </dependency>
	<dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-math3</artifactId>
    	<version>3.6.1</version>
	</dependency>
    
	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		
		<resources>
		   <resource>
			      <directory>src/main/resources</directory>
			      <filtering>true</filtering>
			      <includes>
			        <include>version</include>
			      </includes>
			    </resource>
			    <resource>
			      <directory>src/main/resources</directory>
			      <filtering>false</filtering>
			      <excludes>
			        <exclude>version</exclude>
			      </excludes>
			    </resource>
    	</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>2.0.0</version>
				<configuration>
					<programs>
						<program>
							<mainClass>org.magic.api.main.MtgDesktopCompanion</mainClass>
							<name>${program.id}</name>
						</program>
					</programs>
					<generateRepository>true</generateRepository>
					<repositoryName>lib</repositoryName>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<assembleDirectory>${project.build.directory}/executable</assembleDirectory>
					<binFileExtensions>
						<unix>.sh</unix>
					</binFileExtensions>
					<extraJvmArguments>-Xmx1128m</extraJvmArguments>
					<showConsoleWindow>false</showConsoleWindow>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-resources-system-jar</id>
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/executable/lib</outputDirectory>
							<resources>
								<resource>
									<directory>lib</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources-templates</id>
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/executable/bin/templates</outputDirectory>
							<resources>
								<resource>
									<directory>templates</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-assembly-plugin</artifactId>
                   <configuration>
                     <descriptor>src/assembly/zip.xml</descriptor>
                     <finalName>mtg-desktop-companion-${version}</finalName>
                   </configuration>
                   <executions>
                     <execution>
                       <phase>install</phase>
                       <goals>
                         <goal>single</goal>
                       </goals>
                     </execution>
                   </executions>
             </plugin>
		</plugins>
	</build>

</project>